// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pull_request pipeline scenarios agent builder path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "group:Agent Builder Smoke Tests",
  "> discover-eis-models",
  "> scout-agent-builder-smoke-tests",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios agent builder smoke tests label 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "group:Agent Builder Smoke Tests",
  "> discover-eis-models",
  "> scout-agent-builder-smoke-tests",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios agent builder smoke tests skipped 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios ai infra path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "group:AppEx AI-Infra genAI tests",
  "> ai-infra-gen-ai-inference-api",
  "group:Agent Builder Smoke Tests",
  "> discover-eis-models",
  "> scout-agent-builder-smoke-tests",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios all cypress suites 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "response-ops",
  "response-ops-cases",
  "fleet-cypress",
  "defend-workflows-burn",
  "defend-workflows-serverless-burn",
  "security-solution-burn",
  "osquery-cypress-burn",
  "defend-workflows",
  "defend-workflows-serverless",
  "security-serverless-ai-assistant",
  "security-ai-assistant",
  "security-serverless-ai4dsoc",
  "security-serverless-detection-engine",
  "security-serverless-detection-engine-exceptions",
  "security-detection-engine",
  "security-detection-engine-exceptions",
  "security-serverless-entity-analytics",
  "security-entity-analytics",
  "security-serverless-rule-management",
  "security-serverless-rule-management-prebuilt-customization",
  "security-serverless-rule-management-prebuilt-installation",
  "security-serverless-rule-management-prebuilt-management",
  "security-serverless-rule-management-prebuilt-upgrade",
  "security-rule-management",
  "security-rule-management-prebuilt-customization",
  "security-rule-management-prebuilt-installation",
  "security-rule-management-prebuilt-management",
  "security-rule-management-prebuilt-upgrade",
  "security-explore",
  "security-serverless-explore",
  "security-investigations",
  "security-serverless-investigations",
  "osquery-cypress",
  "osquery-serverless",
  "cloud-security-posture",
  "cloud-security-posture-serverless",
  "asset-inventory",
  "asset-inventory-serverless",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios all gen ai suites 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "group:AppEx AI-Infra genAI tests",
  "> ai-infra-gen-ai-inference-api",
  "group:Agent Builder Smoke Tests",
  "> discover-eis-models",
  "> scout-agent-builder-smoke-tests",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios all ui test suites 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "response-ops",
  "response-ops-cases",
  "fleet-cypress",
  "group:AppEx AI-Infra genAI tests",
  "> ai-infra-gen-ai-inference-api",
  "group:Agent Builder Smoke Tests",
  "> discover-eis-models",
  "> scout-agent-builder-smoke-tests",
  "defend-workflows-burn",
  "defend-workflows-serverless-burn",
  "security-solution-burn",
  "osquery-cypress-burn",
  "defend-workflows",
  "defend-workflows-serverless",
  "security-serverless-ai-assistant",
  "security-ai-assistant",
  "security-serverless-ai4dsoc",
  "security-serverless-detection-engine",
  "security-serverless-detection-engine-exceptions",
  "security-detection-engine",
  "security-detection-engine-exceptions",
  "security-serverless-entity-analytics",
  "security-entity-analytics",
  "security-serverless-rule-management",
  "security-serverless-rule-management-prebuilt-customization",
  "security-serverless-rule-management-prebuilt-installation",
  "security-serverless-rule-management-prebuilt-management",
  "security-serverless-rule-management-prebuilt-upgrade",
  "security-rule-management",
  "security-rule-management-prebuilt-customization",
  "security-rule-management-prebuilt-installation",
  "security-rule-management-prebuilt-management",
  "security-rule-management-prebuilt-upgrade",
  "security-explore",
  "security-serverless-explore",
  "security-investigations",
  "security-serverless-investigations",
  "osquery-cypress",
  "osquery-serverless",
  "cloud-security-posture",
  "cloud-security-posture-serverless",
  "cspm-agentless-scout",
  "scout-edr-real-fleet",
  "group:Security Solution Gen AI",
  "> security-solution-gen-ai-evaluations",
  "asset-inventory",
  "asset-inventory-serverless",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios asset inventory path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "defend-workflows",
  "defend-workflows-serverless",
  "security-serverless-ai-assistant",
  "security-ai-assistant",
  "security-serverless-ai4dsoc",
  "security-serverless-detection-engine",
  "security-serverless-detection-engine-exceptions",
  "security-detection-engine",
  "security-detection-engine-exceptions",
  "security-serverless-entity-analytics",
  "security-entity-analytics",
  "security-serverless-rule-management",
  "security-serverless-rule-management-prebuilt-customization",
  "security-serverless-rule-management-prebuilt-installation",
  "security-serverless-rule-management-prebuilt-management",
  "security-serverless-rule-management-prebuilt-upgrade",
  "security-rule-management",
  "security-rule-management-prebuilt-customization",
  "security-rule-management-prebuilt-installation",
  "security-rule-management-prebuilt-management",
  "security-rule-management-prebuilt-upgrade",
  "security-explore",
  "security-serverless-explore",
  "security-investigations",
  "security-serverless-investigations",
  "osquery-cypress",
  "osquery-serverless",
  "cloud-security-posture",
  "cloud-security-posture-serverless",
  "cspm-agentless-scout",
  "asset-inventory",
  "asset-inventory-serverless",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios automated version bump 1`] = `[]`;

exports[`pull_request pipeline scenarios benchmarks 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_saved_objects",
  "jest_bench",
  "ftr_bench",
  "page_load_bench",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios cases path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "response-ops-cases",
  "security-explore",
  "security-serverless-explore",
  "security-investigations",
  "security-serverless-investigations",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios cloud deploy 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "deploy_cloud",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios cloud fips image 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "build_cloud_fips_image",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios cloud image 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "build_cloud_image",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios cloud image with deploy label 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "deploy_cloud",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios cloud security posture path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "cloud-security-posture",
  "cloud-security-posture-serverless",
  "cspm-agentless-scout",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios code quality 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_saved_objects",
  "warm_start_memory_bench",
  "code_quality_analysis",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios cps test 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_saved_objects",
  "cps-testing",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios cypress burn 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "defend-workflows-burn",
  "defend-workflows-serverless-burn",
  "security-solution-burn",
  "osquery-cypress-burn",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios default, no changes 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios defend workflows test path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "defend-workflows",
  "defend-workflows-serverless",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios docker fips 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "build_fips_image",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios docs path off main 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios docs path on main 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_next_docs",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios edr real fleet path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "defend-workflows",
  "defend-workflows-serverless",
  "scout-edr-real-fleet",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios entity store performance 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "entity_store_performance",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios evals trigger step 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "kibana-evals-trigger",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios fips verification 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "verify_fips_enabled",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios fleet path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "fleet-cypress",
  "cspm-agentless-scout",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios gen ai evals 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "group:Security Solution Gen AI",
  "> security-solution-gen-ai-evaluations",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios kbn-handlebars path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "kbn_handlebars",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios next docs label 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_next_docs",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios osquery path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "osquery-cypress",
  "osquery-serverless",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios osquery skipped 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "response-ops",
  "response-ops-cases",
  "fleet-cypress",
  "defend-workflows-burn",
  "defend-workflows-serverless-burn",
  "security-solution-burn",
  "osquery-cypress-burn",
  "defend-workflows",
  "defend-workflows-serverless",
  "security-serverless-ai-assistant",
  "security-ai-assistant",
  "security-serverless-ai4dsoc",
  "security-serverless-detection-engine",
  "security-serverless-detection-engine-exceptions",
  "security-detection-engine",
  "security-detection-engine-exceptions",
  "security-serverless-entity-analytics",
  "security-entity-analytics",
  "security-serverless-rule-management",
  "security-serverless-rule-management-prebuilt-customization",
  "security-serverless-rule-management-prebuilt-installation",
  "security-serverless-rule-management-prebuilt-management",
  "security-serverless-rule-management-prebuilt-upgrade",
  "security-rule-management",
  "security-rule-management-prebuilt-customization",
  "security-rule-management-prebuilt-installation",
  "security-rule-management-prebuilt-management",
  "security-rule-management-prebuilt-upgrade",
  "security-explore",
  "security-serverless-explore",
  "security-investigations",
  "security-serverless-investigations",
  "cloud-security-posture",
  "cloud-security-posture-serverless",
  "asset-inventory",
  "asset-inventory-serverless",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios project build off main 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "build_project_image",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios project deploy on main 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "build_project_image",
  "deploy_project",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios prompt change path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "security-serverless-ai-assistant",
  "security-ai-assistant",
  "security-serverless-ai4dsoc",
  "security-serverless-detection-engine",
  "security-serverless-detection-engine-exceptions",
  "security-detection-engine",
  "security-detection-engine-exceptions",
  "security-serverless-entity-analytics",
  "security-entity-analytics",
  "security-serverless-rule-management",
  "security-serverless-rule-management-prebuilt-customization",
  "security-serverless-rule-management-prebuilt-installation",
  "security-serverless-rule-management-prebuilt-management",
  "security-serverless-rule-management-prebuilt-upgrade",
  "security-rule-management",
  "security-rule-management-prebuilt-customization",
  "security-rule-management-prebuilt-installation",
  "security-rule-management-prebuilt-management",
  "security-rule-management-prebuilt-upgrade",
  "security-explore",
  "security-serverless-explore",
  "security-investigations",
  "security-serverless-investigations",
  "prompt_changes",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios renovate.json changed with other files 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "renovate_validation",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios renovate.json is the only change 1`] = `
[
  "renovate_validation",
]
`;

exports[`pull_request pipeline scenarios response ops path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "response-ops",
  "security-serverless-ai-assistant",
  "security-ai-assistant",
  "security-serverless-ai4dsoc",
  "security-serverless-detection-engine",
  "security-serverless-detection-engine-exceptions",
  "security-detection-engine",
  "security-detection-engine-exceptions",
  "security-serverless-entity-analytics",
  "security-entity-analytics",
  "security-serverless-rule-management",
  "security-serverless-rule-management-prebuilt-customization",
  "security-serverless-rule-management-prebuilt-installation",
  "security-serverless-rule-management-prebuilt-management",
  "security-serverless-rule-management-prebuilt-upgrade",
  "security-rule-management",
  "security-rule-management-prebuilt-customization",
  "security-rule-management-prebuilt-installation",
  "security-rule-management-prebuilt-management",
  "security-rule-management-prebuilt-upgrade",
  "security-explore",
  "security-serverless-explore",
  "security-investigations",
  "security-serverless-investigations",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios scout cspm label 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "cspm-agentless-scout",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios scout edr label 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "scout-edr-real-fleet",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios scout-tests-only diff 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios security solution path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "defend-workflows",
  "defend-workflows-serverless",
  "security-serverless-ai-assistant",
  "security-ai-assistant",
  "security-serverless-ai4dsoc",
  "security-serverless-detection-engine",
  "security-serverless-detection-engine-exceptions",
  "security-detection-engine",
  "security-detection-engine-exceptions",
  "security-serverless-entity-analytics",
  "security-entity-analytics",
  "security-serverless-rule-management",
  "security-serverless-rule-management-prebuilt-customization",
  "security-serverless-rule-management-prebuilt-installation",
  "security-serverless-rule-management-prebuilt-management",
  "security-serverless-rule-management-prebuilt-upgrade",
  "security-rule-management",
  "security-rule-management-prebuilt-customization",
  "security-rule-management-prebuilt-installation",
  "security-rule-management-prebuilt-management",
  "security-rule-management-prebuilt-upgrade",
  "security-explore",
  "security-serverless-explore",
  "security-investigations",
  "security-serverless-investigations",
  "osquery-cypress",
  "osquery-serverless",
  "cloud-security-posture",
  "cloud-security-posture-serverless",
  "cspm-agentless-scout",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios skippable changes 1`] = `[]`;

exports[`pull_request pipeline scenarios storybook lockfile path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "storybooks",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios storybook path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "storybooks",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios storybook toolchain package affected 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "storybooks",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios storybooks label 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "storybooks",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios sync model labels 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "sync-git-labels",
  "check_saved_objects",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios workflow oom label 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_saved_objects",
  "workflows-oom-testing",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;

exports[`pull_request pipeline scenarios workflows schema path 1`] = `
[
  "build",
  "quick_checks",
  "checks",
  "linting",
  "linting_with_types",
  "check_types",
  "pick_test_group_run_order",
  "build_scout_tests",
  "ci_stats_ready",
  "report_package_metrics",
  "check",
  "check_oas_snapshot",
  "check_api_contracts",
  "check_saved_objects",
  "workflows-oom-testing",
  "warm_start_memory_bench",
  "wait",
  "Post-Build",
]
`;
